Updated UI with Bootstrap styling for all components

--- a/angular.json
+++ b/angular.json
@@ -22,7 +22,9 @@
               }
             ],
             "styles": [
-              "src/styles.css"
+              "src/styles.css",
+              "node_modules/bootstrap/dist/css/bootstrap.min.css",
+              "node_modules/bootstrap-icons/font/bootstrap-icons.css"
             ]
           },
           "configurations": {
@@ -75,11 +77,16 @@
               }
             ],
             "styles": [
-              "src/styles.css"
+              "src/styles.css",
+              "node_modules/bootstrap/dist/css/bootstrap.min.css",
+              "node_modules/bootstrap-icons/font/bootstrap-icons.css"
             ]
           }
         }
       }
     }
+  },
+  "cli": {
+    "analytics": "685db627-5f32-4f3f-86d9-dce13b59dcac"
   }
 }
